[package]
name = "tmp_env"
version = "0.1.0"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A crate which lets you create temporary environment and be automatically cleaned when not needed"
repository = "https://github.com/bnjjj/tmp_env"
keywords = ["env", "tmp", "drop", "guard", "dir"]
categories = ["filesystem", "development-tools", "config"]

[dependencies]
rand = "0.8.3"
